Np 47035 small project improvements (#391)
* np-47035: using more optionals for readability

* np-47035: using record instead of class

* np-47035: use collection

* np-47035: use builtin predicate instead of separate method