@@ -1,8 +1,8 @@
 package no.unit.nva.cristin.projects.model.nva;
 
 import java.net.URI;
+import java.util.Collection;
 import java.util.function.Function;
-import no.unit.nva.cristin.model.Constants;
 import no.unit.nva.cristin.model.CristinApproval;
 import no.unit.nva.cristin.projects.model.cristin.CristinContactInfo;
 import no.unit.nva.cristin.model.CristinDateInfo;
@@ -24,7 +24,6 @@ import no.unit.nva.model.TypedLabel;
 import no.unit.nva.model.adapter.CristinTypedLabelToNvaFormat;
 import nva.commons.core.language.LanguageMapper;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -32,8 +31,10 @@ import java.util.stream.Collectors;
 import nva.commons.core.paths.UriWrapper;
 
 import static java.util.Collections.emptyList;
-import static java.util.Collections.singletonList;
-import static java.util.Objects.nonNull;
+import static java.util.function.Predicate.not;
+import static no.unit.nva.cristin.model.Constants.CRISTIN_IDENTIFIER_TYPE;
+import static no.unit.nva.cristin.model.Constants.TYPE;
+import static no.unit.nva.cristin.model.Constants.VALUE;
 import static no.unit.nva.cristin.projects.model.nva.NvaProject.PROJECT_TYPE;
 import static no.unit.nva.utils.UriUtils.PROJECT;
 import static no.unit.nva.utils.UriUtils.extractLastPathElement;
@@ -91,11 +92,16 @@ public class NvaProjectBuilder implements Function<CristinProject, NvaProject> {
     }
 
     private List<Map<String, String>> createCristinIdentifier() {
-        return nonNull(cristinProject.getCristinProjectId())
-                   ? singletonList(Map.of(
-                       Constants.TYPE, Constants.CRISTIN_IDENTIFIER_TYPE,
-                       Constants.VALUE, cristinProject.getCristinProjectId()))
-                   : emptyList();
+        return Optional.ofNullable(cristinProject.getCristinProjectId())
+                   .map(this::mapOfCristinIdentifier)
+                   .filter(not(Map::isEmpty))
+                   .stream()
+                   .toList();
+    }
+
+    private Map<String, String> mapOfCristinIdentifier(String cristinIdentifier) {
+        return Map.of(TYPE, CRISTIN_IDENTIFIER_TYPE,
+                      VALUE, cristinIdentifier);
     }
 
     private String extractMainTitle() {
@@ -108,18 +114,14 @@ public class NvaProjectBuilder implements Function<CristinProject, NvaProject> {
     private List<Map<String, String>> extractAlternativeTitles() {
         return Optional.ofNullable(cristinProject.getTitle())
                    .map(this::removeMainTitle)
-                   .filter(this::hasData)
-                   .map(Collections::singletonList)
-                   .orElse(emptyList());
+                   .filter(not(Map::isEmpty))
+                   .stream()
+                   .toList();
     }
 
     private Map<String, String> removeMainTitle(Map<String, String> titles) {
         titles.remove(cristinProject.getMainLanguage());
         return titles;
-    }
-
-    private boolean hasData(Map<String, String> titles) {
-        return !titles.isEmpty();
     }
 
     private List<Funding> extractFunding() {
@@ -146,8 +148,9 @@ public class NvaProjectBuilder implements Function<CristinProject, NvaProject> {
     }
 
     private DateInfo extractDateInfo(CristinDateInfo cristinDateInfo) {
-        return nonNull(cristinDateInfo) ? new DateInfo(cristinDateInfo.getSourceShortName(),
-                                                       cristinDateInfo.getDate()) : null;
+        return Optional.ofNullable(cristinDateInfo)
+                   .map(CristinDateInfo::toDateInfo)
+                   .orElse(null);
     }
 
     private ContactInfo extractContactInfo(CristinContactInfo cristinContactInfo) {
@@ -157,24 +160,33 @@ public class NvaProjectBuilder implements Function<CristinProject, NvaProject> {
     }
 
     private FundingAmount extractFundingAmount(CristinFundingAmount cristinFundingAmount) {
-        return nonNull(cristinFundingAmount) ? new FundingAmount(cristinFundingAmount.getCurrencyCode(),
-                                                                 cristinFundingAmount.getAmount()) : null;
+        return Optional.ofNullable(cristinFundingAmount)
+                   .map(CristinFundingAmount::toFundingAmount)
+                   .orElse(null);
     }
 
-    private List<TypedLabel> extractTypedLabels(List<CristinTypedLabel> cristinTypedLabels) {
-        return nonNull(cristinTypedLabels)
-                   ? cristinTypedLabels.stream()
-                         .map(new CristinTypedLabelToNvaFormat())
-                         .collect(Collectors.toList())
-                   : null;
+    private List<TypedLabel> extractTypedLabels(Collection<CristinTypedLabel> cristinTypedLabels) {
+        return Optional.ofNullable(cristinTypedLabels)
+                   .map(this::convertCristinTypedLabels)
+                   .orElse(null);
     }
 
-    private List<URI> extractRelatedProjects(List<String> cristinRelatedProjects) {
-        return nonNull(cristinRelatedProjects)
-                   ? cristinRelatedProjects.stream()
-                         .map(this::cristinUriStringWithIdentifierToNvaUri)
-                         .collect(Collectors.toList())
-                   : null;
+    private List<TypedLabel> convertCristinTypedLabels(Collection<CristinTypedLabel> cristinTypedLabels) {
+        return cristinTypedLabels.stream()
+                   .map(new CristinTypedLabelToNvaFormat())
+                   .toList();
+    }
+
+    private List<URI> extractRelatedProjects(Collection<String> cristinRelatedProjects) {
+        return Optional.ofNullable(cristinRelatedProjects)
+                   .map(this::convertRelatedProjects)
+                   .orElse(null);
+    }
+
+    private List<URI> convertRelatedProjects(Collection<String> cristinRelatedProjects) {
+        return cristinRelatedProjects.stream()
+                   .map(this::cristinUriStringWithIdentifierToNvaUri)
+                   .toList();
     }
 
     private URI cristinUriStringWithIdentifierToNvaUri(String cristinUri) {
@@ -182,17 +194,17 @@ public class NvaProjectBuilder implements Function<CristinProject, NvaProject> {
         return getNvaApiId(identifier, PROJECT);
     }
 
-    private List<Approval> extractApprovals(List<CristinApproval> cristinApprovals) {
+    private List<Approval> extractApprovals(Collection<CristinApproval> cristinApprovals) {
         return cristinApprovals.stream()
                    .map(new CristinApprovalToApproval())
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
-    private List<Organization> extractInstitutionsResponsibleForResearch(List<CristinOrganization>
+    private List<Organization> extractInstitutionsResponsibleForResearch(Collection<CristinOrganization>
                                                                              institutionsResponsibleForResearch) {
         return institutionsResponsibleForResearch.stream()
                    .map(CristinOrganization::extractPreferredTypeOfOrganization)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     private List<ExternalSource> extractExternalSources(List<CristinExternalSource> externalSources) {
